--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -1,4 +1,3 @@
-user=root
-password=root
-driver=com.mysql.cj.jdbc.Driver
-url=jdbc:mysql://localhost:3306/dreamdraw?useUnicode=true&useSSL=true&characterEncoding=utf-8&serverTimezone=GMT
+db.user=root
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://158.101.154.101:3307/study?useUnicode=true&useSSL=false&characterEncoding=utf-8
