--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ plugins {
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
 }
 
-group = 'com'
+group = 'com.study'
 version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
@@ -43,6 +43,8 @@ dependencies {
     runtimeOnly 'mysql:mysql-connector-java:8.0.28'
 
     implementation 'com.alibaba:fastjson:2.0.23'
+
+    implementation 'com.nimbusds:nimbus-jose-jwt:9.30'
 }
 
 tasks.named('test') {
