--- a/build.gradle
+++ b/build.gradle
@@ -24,14 +24,22 @@ ext {
 }
 
 dependencies {
+    // springboot
+    implementation('org.springframework.boot:spring-boot-starter-web') {
+        exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
+    }
+    // undertow
+    implementation 'org.springframework.boot:spring-boot-starter-undertow'
+
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
-    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.data:spring-data-commons'
+
+    // mybatis
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.3.0'
-    implementation "org.springframework.security:spring-security-core:${springSecurityVersion}"
-    implementation "org.springframework.boot:spring-boot-starter-security"
-    implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.2.RELEASE'
-    implementation 'org.springframework.security:spring-security-jwt:1.1.1.RELEASE'
+
+    // security
+    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
